# chromiumoxide

./: CHANGELOG.md  Cargo.toml
chromiumoxide_cdp/: Cargo.toml
chromiumoxide_fetcher/: Cargo.toml
chromiumoxide_fetcher/src/runtime/: zip.rs
chromiumoxide_pdl/: Cargo.toml
chromiumoxide_pdl/src/pdl/: parser.rs  ser.rs
chromiumoxide_types/: Cargo.toml
chromiumoxide_types/src/: lib.rs
examples/: wiki-async-std.rs
src/: conn.rs  element.rs  page.rs
src/browser/: config.rs  mod.rs
src/handler/: frame.rs  page.rs
