[package]
name = "chromiumoxide"
version = "0.8.0"
rust-version = "1.85"
autotests = false
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/mattsse/chromiumoxide"
repository = "https://github.com/mattsse/chromiumoxide"
description = "Library for interacting with a chrome instance with the chrome devtools protocol"
keywords = ["chrome", "chromedriver", "puppeteer", "automation"]
categories = ["web-programming", "api-bindings", "development-tools::testing"]

[workspace.dependencies]
serde_json = "1"
serde ="1"
reqwest = { version = "0.13.1", default-features = false }
tokio = "1"
tracing = "0.1"
thiserror = "2"
anyhow = "1"
async-std = "1.5"
proc-macro2 = "1.0.32"
either = "1.6.1"
heck = "0.5"
quote = "1.0.10"
regex = "1.5.4"
once_cell = "1.8.0"
directories = "6"
zip = { version = "7", default-features = false }
surf = { version = "2.3", default-features = false }
ureq = "2.10.0"
tempfile = "3.10.1"
windows-registry = "0.5"
windows-version = "0.1"

[dependencies]
async-tungstenite = "0.32.0"
serde = { workspace = true, features = ["derive"] }
async-std = { workspace = true, features = [
  "attributes",
  "unstable",
], optional = true }
futures = "0.3"
chromiumoxide_types = { path = "chromiumoxide_types", version = "0.8" }
chromiumoxide_cdp = { path = "chromiumoxide_cdp", version = "0.8" }
chromiumoxide_fetcher = { path = "chromiumoxide_fetcher", version = "0.8", default-features = false, optional = true }
serde_json = { workspace = true }
which = "8"
thiserror = { workspace = true }
url = "2"
base64 = "0.22"
fnv = "1"
futures-timer = "3"
cfg-if = "1"
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "time",
  "fs",
  "macros",
  "process",
], optional = true }
tracing = { workspace = true }
pin-project-lite = "0.2"
dunce = "1"
bytes = { version = "1", features = ["serde"], optional = true }
reqwest = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-registry = { workspace = true }

[dev-dependencies]
quote = { workspace = true }
proc-macro2 = { workspace = true }
chrono = "0.4.1"
tracing-subscriber = "0.3"
tokio = { workspace = true, features = ["rt-multi-thread", "time", "macros"] }

[features]
default = ["tokio-runtime", "bytes"]
async-std-runtime = ["async-std", "async-tungstenite/async-std-runtime"]
tokio-runtime = ["tokio", "async-tungstenite/tokio-runtime"]
fetcher = []
bytes = ["dep:bytes"]
serde0 = []

# Temporary features until cargo weak dependencies bug is fixed
# See https://github.com/rust-lang/cargo/issues/10801
_fetcher-rustls-async-std = [
  "fetcher",
  "chromiumoxide_fetcher/_rustls-async-std",
]
_fetcher-rustls-tokio = ["fetcher", "chromiumoxide_fetcher/_rustls-tokio"]
_fetcher-native-async-std = [
  "fetcher",
  "chromiumoxide_fetcher/_native-async-std",
]
_fetcher-native-tokio = ["fetcher", "chromiumoxide_fetcher/_native-tokio"]

[[example]]
name = "wiki-async-std"
required-features = ["async-std-runtime"]

[[example]]
name = "fetcher-async-std"
required-features = ["async-std-runtime", "_fetcher-native-async-std"]

[[example]]
name = "fetcher"
required-features = ["_fetcher-native-tokio"]

[[test]]
name = "chromiumoxide_tests"
path = "tests/lib.rs"
harness = true

[workspace]
members = [
  "chromiumoxide_pdl",
  "chromiumoxide_types",
  "chromiumoxide_cdp",
  "chromiumoxide_fetcher",
]
