[package]
name = "chromiumoxide_cdp"
version = "0.8.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2024"
rust-version = "1.85"
description = "Contains all the generated types for chromiumoxide"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mattsse/chromiumoxide"
repository = "https://github.com/mattsse/chromiumoxide"
readme = "../README.md"
include = ["src/**/*", "*.pdl", "LICENSE-*"]

[features]
serde0 = []

[dev-dependencies]
chromiumoxide_pdl = { path = "../chromiumoxide_pdl", version = "0.8" }
ureq = { workspace = true }
tempfile = { workspace = true }

[dependencies]
chromiumoxide_pdl = { path = "../chromiumoxide_pdl", version = "0.8" }
chromiumoxide_types = { path = "../chromiumoxide_types", version = "0.8" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
