[package]
name = "chromiumoxide_fetcher"
version = "0.8.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Contains a chromium fetcher"
homepage = "https://github.com/mattsse/chromiumoxide"
repository = "https://github.com/mattsse/chromiumoxide"
readme = "../README.md"
include = ["src/**/*", "LICENSE-*"]

[lib]
name = "chromiumoxide_fetcher"
path = "src/lib.rs"
doctest = false

[[test]]
name = "chromiumoxide_fetcher"
path = "tests/lib.rs"
harness = true

[dev-dependencies]
reqwest = { version = "0.12", features = [
  "rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["rt", "fs", "process", "macros"] }

[dependencies]
thiserror = "1"
anyhow = "1"
directories = "6"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
async-std = { version = "1.5", features = ["unstable"], optional = true }
tokio = { version = "1", features = ["fs"], optional = true }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
], optional = true }
surf = { version = "2.3", default-features = false, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-version = "0.1"

[features]
default = ["_native-tokio"]
async-std-runtime = ["async-std", "surf"]
tokio-runtime = ["tokio", "reqwest"]

_rustls-async-std = ["surf/h1-client-rustls", "async-std-runtime"]
_rustls-tokio = ["reqwest/rustls-tls", "tokio-runtime"]
_native-async-std = ["surf/h1-client", "async-std-runtime"]
_native-tokio = ["reqwest/native-tls", "tokio-runtime"]
