[package]
name = "chromiumoxide_fetcher"
version = "0.8.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Contains a chromium fetcher"
homepage = "https://github.com/mattsse/chromiumoxide"
repository = "https://github.com/mattsse/chromiumoxide"
readme = "../README.md"
include = ["src/**/*", "LICENSE-*"]

[lib]
name = "chromiumoxide_fetcher"
path = "src/lib.rs"
doctest = false

[[test]]
name = "chromiumoxide_fetcher"
path = "tests/lib.rs"
harness = true

[dev-dependencies]
reqwest = { workspace = true, features = [
  "rustls", "http2"
] }
tokio = { workspace = true , features = ["rt", "fs", "process", "macros"] }

[dependencies]
thiserror = { workspace = true}
anyhow = { workspace = true }
directories = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
zip = { workspace = true, features = ["deflate"] }
async-std = { workspace = true, features = ["unstable"], optional = true }
tokio = { workspace = true, features = ["fs"], optional = true }
reqwest = { workspace = true, features = [
  "json",
], optional = true }
surf = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-version = { workspace = true }

[features]
default = ["_native-tokio"]
async-std-runtime = ["async-std", "surf"]
tokio-runtime = ["tokio", "reqwest"]

_rustls-async-std = ["surf/h1-client-rustls", "async-std-runtime"]
_rustls-tokio = ["reqwest/rustls", "tokio-runtime"]
_native-async-std = ["surf/h1-client", "async-std-runtime"]
_native-tokio = ["reqwest/native-tls", "tokio-runtime"]
