[package]
name = "chromiumoxide_pdl"
version = "0.8.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Contains a PDL parser and rust generator"
homepage = "https://github.com/mattsse/chromiumoxide"
repository = "https://github.com/mattsse/chromiumoxide"
readme = "../README.md"
include = ["src/**/*", "LICENSE-*"]

[dependencies]
once_cell = { workspace = true }
regex = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
heck = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chromiumoxide_types = { path = "../chromiumoxide_types", version = "0.8" }
either = { workspace = true }

[features]
serde0 = []
