[package]
name = "chromiumoxide_types"
version = "0.8.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2024"
description = "Contains the essential types necessary for using chromiumoxide"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mattsse/chromiumoxide"
repository = "https://github.com/mattsse/chromiumoxide"
readme = "../README.md"
include = ["src/**/*", "LICENSE-*"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
